crystal-facet-uml (1.56.1) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * database supports worst-case length of description texts

 -- Andreas Warnke <cfu@andreaswarnke.de>  Sun, 03 Mar 2024 10:00:00 +0100

crystal-facet-uml (1.56.0) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * gtk3 support dropped, more than 100 #if preprocessor-statements removed
  * GtkFileChooserDialog replaced by GtkFileDialog (without filetype selection)
  * deprecated function gdk_pixbuf_get_from_texture replaced
  * XMI export traces if a classifier contains a child twice (in DEBUG mode)

 -- Andreas Warnke <cfu@andreaswarnke.de>  Sun, 03 Mar 2024 10:00:00 +0100

crystal-facet-uml (1.55.3) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * GdkPixbuf replaced by GdkTexture
  * GtkComboBox replaced by GtkDropDown

 -- Andreas Warnke <cfu@andreaswarnke.de>  Sat, 10 Feb 2024 09:00:00 +0100

crystal-facet-uml (1.55.2) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * when loading a .tmp-cfu file from a terminated session, the right json file
    is restored, not the guessed .cfuJ file name.
  * moved example_diagrams/ to documentation/examples
  * gtk_widget_show/hide replaced by gtk4 function gtk_widget_set_visible
  * gtk_image_set_from_pixbuf replaced by gtk_image_set_from_paintable of gtk4

 -- Andreas Warnke <cfu@andreaswarnke.de>  Sat, 27 Jan 2024 17:00:00 +0100

crystal-facet-uml (1.55.1) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * Diagram descriptions can be 8191 bytes long, not reduced by SQL overhead
  * Too long entered texts are not cut in the middle of an utf8 code point

 -- Andreas Warnke <cfu@andreaswarnke.de>  Sat, 06 Jan 2024 10:00:00 +0100

crystal-facet-uml (1.55.0) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * readme.markdown renamed to README.md
  * license.txt renamed to LICENSE.txt
  * moved installation_linux/ to installation/linux
  * moved installation_win/ to installation/win