@@ -13,10 +13,8 @@ echo "based on crystal-facet-uml_${VERSIONSTR}.orig.tar.gz"
 echo "----"
 echo "clean up possibly broken previous cov-build"
 test -d crystal-facet-uml_${VERSIONSTR} && rm -fr crystal-facet-uml_${VERSIONSTR}
-test -d lcov_unit.info && rm -f lcov_unit.info
-test -d lcov_unit_filtered.info && rm -f lcov_unit_filtered.info
-test -d lcov_all.info && rm -f lcov_all.info
-test -d lcov_all_filtered.info && rm -f lcov_all_filtered.info
+test -d lcov_covts.info && rm -f lcov_covts.info
+test -d lcov_covts_filtered.info && rm -f lcov_covts_filtered.info
 
 echo "extract archive"
 tar -xzf crystal-facet-uml_${VERSIONSTR}.orig.tar.gz
@@ -32,40 +30,25 @@ cmake -DCMAKE_BUILD_TYPE=Debug -DCFU_ADD_GCOV_TARGET=ON ..
 make -j4 gcov_crystal-facet-uml
 cd ../..
 
-echo "initializing lcov for unit tests"
-lcov --capture --initialize --directory ./crystal-facet-uml_${VERSIONSTR}/cmake_build/CMakeFiles/gcov_crystal-facet-uml.dir --output-file lcov_unit.info
-
-echo "running unit tests"
-cd crystal-facet-uml_${VERSIONSTR}/cmake_build/
-{ ./gcov_crystal-facet-uml -U || echo "ERROR == ERROR == ERROR == ERROR" ; } | grep -e '^test ' -e '^  test ' -e 'ERROR '
-cd ../..
-
-echo "running gcov/lcov on unittest"
-lcov --capture --directory ./crystal-facet-uml_${VERSIONSTR}/cmake_build/CMakeFiles/gcov_crystal-facet-uml.dir --output-file lcov_unit.info
-lcov --remove lcov_unit.info '*/test_fw/*' '*/test/*' '/usr/*' --output-file lcov_unit_filtered.info
-genhtml --prefix `pwd`/crystal-facet-uml_${VERSIONSTR} lcov_unit_filtered.info --title crystal-facet-uml_v${VERSIONSTR}_unittest --output-directory crystal-facet-uml_${VERSIONSTR}_unittest_coverage
-
-echo "initializing lcov for all tests"
-lcov --capture --initialize --directory ./crystal-facet-uml_${VERSIONSTR}/cmake_build/CMakeFiles/gcov_crystal-facet-uml.dir --output-file lcov_all.info
+echo "initializing lcov for COVERAGE tests"
+lcov --capture --initial --directory ./crystal-facet-uml_${VERSIONSTR}/cmake_build/CMakeFiles/gcov_crystal-facet-uml.dir --output-file lcov_covts.info
 
 echo "running all coverage tests"
 cd crystal-facet-uml_${VERSIONSTR}/cmake_build/
 { ./gcov_crystal-facet-uml -C || echo "ERROR == ERROR == ERROR == ERROR" ; } | grep -e '^test ' -e '^  test ' -e 'ERROR '
 cd ../..
 
-echo "running gcov/lcov on alltests"
-lcov --capture --directory ./crystal-facet-uml_${VERSIONSTR}/cmake_build/CMakeFiles/gcov_crystal-facet-uml.dir --output-file lcov_all.info
-lcov --remove lcov_all.info '*/test_fw/*' '*/test/*' '/usr/*' --output-file lcov_all_filtered.info
-genhtml --prefix `pwd`/crystal-facet-uml_${VERSIONSTR} lcov_all_filtered.info --title crystal-facet-uml_v${VERSIONSTR}_alltests --output-directory crystal-facet-uml_${VERSIONSTR}_alltests_coverage
+echo "running gcov/lcov on covts"
+lcov --capture --directory ./crystal-facet-uml_${VERSIONSTR}/cmake_build/CMakeFiles/gcov_crystal-facet-uml.dir --output-file lcov_covts.info
+lcov --remove lcov_covts.info '*/test_fw/*' '*/test/*' '/usr/*' --output-file lcov_covts_filtered.info
+genhtml --prefix `pwd`/crystal-facet-uml_${VERSIONSTR} lcov_covts_filtered.info --title crystal-facet-uml_v${VERSIONSTR}_covts --output-directory crystal-facet-uml_${VERSIONSTR}_covts_coverage
 
 echo "clean up test"
 sleep 10
 rm -fr crystal-facet-uml_${VERSIONSTR}
 
-zip -r crystal-facet-uml_${VERSIONSTR}_unittest_coverage.zip crystal-facet-uml_${VERSIONSTR}_unittest_coverage
-echo "output written to crystal-facet-uml_${VERSIONSTR}_unittest_coverage"
-zip -r crystal-facet-uml_${VERSIONSTR}_alltests_coverage.zip crystal-facet-uml_${VERSIONSTR}_alltests_coverage
-echo "output written to crystal-facet-uml_${VERSIONSTR}_alltests_coverage"
+zip -r crystal-facet-uml_${VERSIONSTR}_covts_coverage.zip crystal-facet-uml_${VERSIONSTR}_covts_coverage
+echo "output written to crystal-facet-uml_${VERSIONSTR}_covts_coverage"
 
 
 # Copyright 2021-2024 Andreas Warnke
