@@ -36,7 +36,11 @@ test_suite_t utf8string_test_get_suite(void)
 {
     test_suite_t result;
     test_suite_init( &result,
-                     "utf8StringTest",
+#ifndef NDEBUG
+                     "utf8StringTest (VARIANT: DEBUG)",
+#else
+                     "utf8StringTest (VARIANT: RELEASE)",
+#endif
                      TEST_CATEGORY_UNIT | TEST_CATEGORY_CONTINUOUS | TEST_CATEGORY_COVERAGE,
                      &set_up,
                      &tear_down
